--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-plugin-styled-components": "^2.1.4",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
+    "prettier": "3.0.3",
     "sass": "^1.69.0",
     "typescript": "^5"
   }
