--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "classnames": "^2.3.2",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "uuid": "^9.0.1"
+    "react-hook-form": "^7.47.0",
+    "uuid": "^9.0.1",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/node": "^20",
