--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "axios": "^1.5.1",
     "classnames": "^2.3.2",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
+    "swr": "^2.2.4",
     "uuid": "^9.0.1",
     "yup": "^1.3.2"
   },
