--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^3.3.2",
     "axios": "^1.5.1",
     "classnames": "^2.3.2",
+    "cookies-next": "^4.0.0",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
