--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@hookform/resolvers": "^3.3.2",
     "axios": "^1.5.1",
     "classnames": "^2.3.2",
-    "cookies-next": "^4.0.0",
+    "cookies-next": "4.1.0",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
