--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
