--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 8000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "@vkid/sdk": "^1.0.1",
     "axios": "^1.5.1",
     "classnames": "^2.3.2",
     "cookies-next": "4.1.0",
