--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 8000",
+    "dev": "next dev -H local.onepass.ru -p 443 --experimental-https",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -14,9 +14,9 @@
     "axios": "^1.5.1",
     "classnames": "^2.3.2",
     "cookies-next": "4.1.0",
-    "next": "14.0.3",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.0.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "swr": "^2.2.4",
     "uuid": "^9.0.1",
@@ -30,7 +30,7 @@
     "@types/uuid": "^9.0.5",
     "babel-plugin-styled-components": "^2.1.4",
     "eslint": "^8",
-    "eslint-config-next": "13.5.4",
+    "eslint-config-next": "^14.0.4",
     "prettier": "3.0.3",
     "sass": "^1.69.0",
     "typescript": "^5"
