--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev -H local.onepass.ru -p 443 --experimental-https",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -H local.onepass.ru -p 443",
     "lint": "next lint"
   },
   "dependencies": {
