--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
+    "swiper": "^11.0.7",
     "swr": "^2.2.4",
     "uuid": "^9.0.1",
     "yup": "^1.3.2"
