--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "classnames": "^2.3.2",
     "cookies-next": "4.1.0",
     "next": "^14.0.4",
+    "prom-client": "^15.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
